# chenaikit

./: .env  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  WEBSOCKET_COMPLETION.md  coverage.config.js  hardhat.config.js  issue1.md  jest.config.js  jest.setup.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-validation.js  tsconfig.base.json
backend/: .dockerignore  .env  .env.example  .eslintignore  .eslintrc.js  Cargo.toml  Dockerfile  Dockerfile.dev  PROGRESS_API.md  README.md  SEEDING.md  docker-compose.prod.yml  docker-compose.ws-scale.yml  docker-compose.yml  jest.config.js  jest.integration.config.js  jest.integration.setup.js  lint_results.json  package.json  package.json.backup  run_tests.sh  structure.md  tsconfig.json
backend/migrations/: 20240320000000_initial.sql  20240321000000_add_indexes.sql
backend/prisma/: dev.db  schema.prisma  seed.ts
backend/prisma/prisma/: dev.db  dev.db-journal
backend/prisma/views/: analytics.sql
backend/scripts/: deploy.sh  generate-types.ts  rollback.sh
backend/src/: config.rs  db.rs  error.rs  index.ts  main.rs  server.ts
backend/src/__tests__/: accounts.test.ts  analytics.test.ts  api.integration.test.ts  backupService.test.ts  debug.test.ts  index.test.ts  models.test.ts  setup.ts  swagger.test.ts  v2.creditScore.test.ts  v2.fraudDetection.test.ts  v2.integration.test.ts  websocket.test.ts
backend/src/config/: backup.ts  cache.ts  compression.ts  email.ts  featureFlags.ts  health.ts  jobs.ts  logging.ts  monitoring.ts  rateLimit.ts  redis.ts  secrets.ts  security.ts  storage.ts  swagger.ts
backend/src/controllers/: accountController.ts  analyticsController.ts  authController.ts  fileController.ts  mfaController.ts  webhookController.ts
backend/src/database/: optimization.md
backend/src/factories/: apiKeyFactory.ts  apiUsageFactory.ts  index.ts  userFactory.ts
backend/src/handlers/: auth.rs  health.rs  mod.rs  nft.rs  progress.rs  quest.rs
backend/src/jobs/: backupJob.ts  sendEmail.ts
backend/src/middleware/: advancedRateLimiter.ts  apiGateway.ts  apiKeyAuth.ts  auth.ts  cache.ts  compression.ts  cors.ts  distributedRateLimiter.ts  errorHandler.ts  errorTracking.ts  expressRouteLimiters.ts  featureFlags.ts  fileUpload.ts  jobAuth.ts  logging.ts  queryLogger.ts  rateLimiter.ts  requestId.ts  requireMFA.ts  security.ts  securityHeaders.ts  swaggerValidator.ts  upload.ts  validation.ts  versioning.ts  webhookAuth.ts
backend/src/models/: Account.ts  ApiKey.ts  CreditScore.ts  ERD.md  Experiment.ts  FeatureFlag.ts  FraudAlert.ts  HealthCheck.ts  MLModel.ts  Transaction.ts  User.ts  Webhook.ts  mod.rs  nft.rs  progress.rs  quest.rs  user.rs
backend/src/prisma/: client.ts
backend/src/routes/: accounts.ts  analytics.ts  apiKeys.ts  auth.ts  featureFlags.ts  files.ts  health.ts  jobs.ts  mfaRoutes.ts  mlModels.ts  mod.rs  webhooks.ts
backend/src/schemas/: creditScore.schema.ts  index.ts  mlModel.schema.ts
backend/src/scripts/: migrate.ts  seed.ts
backend/src/seeds/: developmentSeed.ts  index.ts  productionSeed.ts  testSeed.ts
backend/src/services/: analyticsService.ts  apiKeyService.ts  auth.rs  backupService.ts  cache.rs  cacheService.ts  creditScoreService.ts  emailService.ts  experimentService.ts  featureFlagService.ts  fileStorageService.ts  fraudDetectionService.ts  healthService.ts  jobQueue.ts  metricsService.ts  mfaService.ts  migrationService.ts  mod.rs  modelDriftDetector.ts  modelRegistryService.ts  queryOptimizer.ts  s3Service.ts  skill_tree.rs  storageService.ts  usageTrackingService.ts  webSocketService.ts  webhookEventEmitter.ts  webhookRetryWorker.ts  webhookService.ts  websocketService.ts
backend/src/swagger/: README.md  accounts.swagger.ts  analytics.swagger.ts  auth.swagger.ts  health.swagger.ts  schemas.yaml
backend/src/templates/: account-verification.html  notification.html  password-reset.html  welcome.html
backend/src/tests/: cache_tests.rs  integration_tests.rs  mod.rs  progress_tests.rs  skill_tree_tests.rs
backend/src/tracing/: baggage.ts  correlation.ts  spans.ts  tracer.ts
backend/src/types/: api.ts  auth.ts  cache.ts  express.d.ts  monitoring.ts  speakeasy.d.ts
backend/src/utils/: abStatistics.ts  backupUtils.ts  cacheKeys.ts  jwt.ts  (+17 more)
backend/tracing/: README.md  docker-compose.jaeger.yml  otel-collector-config.yaml  prometheus.yml
contracts/common-utils/: .gitignore  Cargo.toml  README.md
contracts/fraud-detect/: Cargo.toml
contracts/governance/: Cargo.toml  README.md
(+479 files in other folders)
