[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Authentication and security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# Serialization and validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Smart contract interaction
ethers = "2.0"
web3 = "0.19"
