[package]
name = "fraud-detect"
version = "0.1.0"
description = "Fraud detection smart contract for ChenAIKit"
authors = ["ChenAIKit Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[patch.crates-io]
# Pin soroban-env-host to 22.1.4 which fixes the ChaCha20Rng/ed25519-dalek CryptoRng
# trait incompatibility present in 22.1.3 and earlier.
soroban-env-host = { version = "=22.1.4" }
soroban-env-common = { version = "=22.1.4" }
soroban-env-macros = { version = "=22.1.4" }
soroban-builtin-sdk-macros = { version = "=22.1.4" }
soroban-env-guest = { version = "=22.1.4" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
